corrections suite soutenance

--- a/Menu_Le_delice_des_sens.html
+++ b/Menu_Le_delice_des_sens.html
@@ -14,7 +14,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         </head>
         <body>
-            <div id="main_page">
+            <div class="main_page">
                 <header class="header_menu">
                     <div class="button_back_welcome">
                         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
@@ -34,8 +34,10 @@
                         <!--Restaurant menu-->
                         <div class="menu_restaurant">
                             <div class="menu">
-                                <h2>entrées</h2>
-                                <div class="underline"></div>
+                                <div class="menu_titres">
+                                    <h2>entrées</h2>
+                                    <div class="underline"></div>
+                                </div>
                                 <div class="dish_block entree">
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
@@ -46,7 +48,7 @@
                                                 </div>
                                                 <div class="dish_price">25€</div>
                                             </div>
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                         </div>
                                     </div>
                                     <div tabindex=0 class="dish_card">
@@ -54,11 +56,11 @@
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Bouchée de homard croustillant</p>
-                                                    <p>Et sa farandole de petits légumes</p>
+                                                    <p>Et sa fasandole de petits légumes</p>
                                                 </div>
                                                 <div class="dish_price">35€</div>
                                             </div>
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                         </div>
                                     </div>
                                     <div tabindex=0 class="dish_card">
@@ -70,19 +72,21 @@
                                                 </div>
                                                 <div class="dish_price">20€</div>
                                             </div>
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                         </div>
                                     </div>
                                     
                                 </div>
                             </div>
                             <div class="menu">
-                                <h2>plats</h2>
-                                <div class="underline"></div>
+                                <div class="menu_titres">
+                                    <h2>plats</h2>
+                                    <div class="underline"></div>
+                                </div>
                                 <div class="dish_block meal">
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Poulet rôti aux herbes de Provence</p>
@@ -94,7 +98,7 @@
                                     </div>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Langouste rôtie</p>
@@ -106,7 +110,7 @@
                                     </div>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Côte de boeuf Angus</p>
@@ -119,15 +123,17 @@
                                 </div>
                             </div>
                             <div class="menu">
-                                <h2>desserts</h2>
-                                <div class="underline"></div>
+                                <div class="menu_titres">
+                                    <h2>desserts</h2>
+                                    <div class="underline"></div>
+                                </div>
                                 <div class="dish_block dessert">
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Farandole de desserts</p>
+                                                    <p class="span">fasandole de desserts</p>
                                                     <p>Du chef</p>
                                                 </div>
                                                 <div class="dish_price">18€</div>
@@ -136,7 +142,7 @@
                                     </div>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Crème brulée</p>
@@ -148,7 +154,7 @@
                                     </div>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <i class="far fa-check-circle"></i>
+                                            <i class="fas fa-check-circle"></i>
                                             <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Tiramisu</p>
@@ -168,9 +174,9 @@
                         </div>
                     </div>
                 </section>
-                <footer>
+                <footer class="footer">
                     <p class="logo">ohmyfood</p>
-                    <div class="footer">
+                    <div class="footer_links">
                     <div class="footer_block">
                         <p><a href="#">
                             <i class="fas fa-utensils"></i>
