--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="page"></div>
             <div class="loader">ohmyfood</div>
             <!--Main block-->
-            <div id="main_page">
+            <div class="main_page index">
                 <header>
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
                 </header>
@@ -144,9 +144,9 @@
                     </div>
                 </section>
             </div>
-            <footer>
+            <footer class="footer index">
                     <p class="logo">ohmyfood</p>
-                    <div class="footer">
+                    <div class="footer_links">
                     <div class="footer_block">
                         <p><a href="#">
                             <i class="fas fa-utensils"></i>
